# K-means-K-NN-Recommendation-System

./: .gitignore  CMakeLists.txt  Makefile  README.html  README.md  config  install_boost.sh
include/: AbstractSimilaritySearch.h  CosineSimilarityLSH.h  Datasets.hpp  DistancesIndex.h  DistancesTable.h  EuclideanHypercubeProjection.h  EuclideanSpaceLSH.h  Evaluation.hpp  HashTable.h  HypercubeProjection.cpp  HypercubeProjection.h  LSH.h  Lexicon.hpp  NDVector.h  NearestNeighborSearch.h  ProximitySearch.hpp  QuerysetReader.h  Silhouette.h  StoppingCriterion.h  UserVectors.cpp  UserVectors.hpp  VectorTSVReader.h  analysis.cpp  analysis.hpp  assigning.h  cluster.hpp  initializing.h  kmeans.hpp  metrics.h  parameters.hpp  preprocessing.hpp  recommendations.hpp  similaritySearch.h  updating.h  utils.hpp
include/ApproximateNeighborSearch/: CosineSimilarityLSH.h  HypercubeProjection.h  NDVector.h  NearestNeighborSearch.h  VectorCSVReader.h  VectorTSVReader.h
include/clustering/: DistancesTable.h  Silhouette.h  StoppingCriterion.h  assigning.h  cluster.hpp  clustering.h  initializing.h  kmeans.hpp  updating.h
input/: fix_input.py
src/: CosineSimilarityLSH.cpp  CosineSimilarityLSH.h  DatasetReader.cpp  DatasetReader.h  DatasetStructures.cpp  Datasets.cpp  DistancesIndex.h  DistancesTable.cpp  EuclideanHypercubeProjection.cpp  EuclideanHypercubeProjection.h  EuclideanSpaceLSH.cpp  EuclideanSpaceLSH.h  Evaluation.cpp  HashTable.cpp  HashTable.h  HypercubeProjection.cpp  LSH.cpp  NDVector.cpp  NearestNeighborSearch.cpp  ProximitySearch.cpp  QuerysetReader.cpp  Silhouette.cpp  StoppingCriterion.cpp  UserVectors.cpp  VectorTSVReader.cpp  VectorTSVReader.h  assigning.cpp  clustering.cpp  initializing.cpp  kmeans.cpp  main.cpp  metrics.cpp  parameters.cpp  parameters.hpp  preprocessing.cpp  recommendations.cpp  similaritySearch.cpp  updating.cpp
src/ApproximateNeighborSearch/: CosineSimilarityLSH.cpp  EuclideanSpaceLSH.cpp  HashTable.cpp  HypercubeProjection.cpp  NDVector.cpp  NearestNeighborSearch.cpp  VectorCSVReader.cpp  metrics.cpp
src/clustering/: DistancesTable.cpp  Silhouette.cpp  StoppingCriterion.cpp  assigning.cpp  clustering.cpp  initializing.cpp  parameters.cpp  updating.cpp
test/: CMakeLists.txt  dummyTest.cpp  misc.cpp  testEuclideanLSH.cpp  testKNN.cpp  testNDVector.cpp  testNN.cpp  test_assignments.cpp  test_initializations.cpp  test_updating.cpp
